objects/parrot__Notification__e.object
<CustomObject>
    <fields>
        <fullName>parrot__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parrot__Job_Id__c</fullName>
        <label>Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parrot__Message__c</fullName>
        <description>DataParrot Notification Message</description>
        <label>Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parrot__User_Id__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parrot__WarningLevel__c</fullName>
        <description>DataParrot Notification Warning Level</description>
        <label>WarningLevel</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Notification</label>
    <pluralLabel>Notifications</pluralLabel>
</CustomObject>